# ai-voice-bridge

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.agent/rules/: code-style-guide.md  gemini_api_guidelines_1.md  gemini_api_guidelines_2.md  project-context.md  terminal-usage.md
src/ai_voice_bridge/: __init__.py  __main__.py  bridge.py  cli.py  config.py  gemini_client.py  main.py  websocket_server.py
src/ai_voice_bridge/strategies/: __init__.py  always_on.py  base.py  on_demand.py
