[project]
name = "ai-voice-bridge"
version = "0.8.0"
description = "Modular Realtime Voice Bridge for Gemini Live API"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "google_genai>=1.62.0, <2.0.0",
    "python-dotenv>=1.0.1, <2.0.0",
    "websockets>=15.0, <16.0",
    "pydantic-settings>=2.10.1, <3.0.0",
    "numpy>=2.4.2, <3.0.0",
    "sounddevice>=0.5.5, <1.0.0",
    "fastapi>=0.128.3, <1.0.0",
    "uvicorn[standard]>=0.40.0, <1.0.0",
]

[project.scripts]
ai-voice-bridge = "ai_voice_bridge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0, <9.0.0",
    "pytest-asyncio>=0.23.6",
    "black>=24.4.2",
    "ruff>=0.4.2",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_voice_bridge"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP"]
